Migrated to java14 records for requests/responses